# gps_to_waypoint

./: .gitignore  CMakeLists.txt  README.md
include/: convert.hpp  readFile.hpp  writeFile.hpp
src/: convert.cpp  main.cpp  readFile.cpp
